2014-06-26  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-29)

	* R/mkinresplot.R: Make it possible to specify xlim
	* R/geometric_mean.R, man/geometric_mean.Rd: Add geometric mean
	  function
	* R/mkinfit.R, man/mkinfit.Rd: Calculate additional (pseudo)-DT50
	  values for FOMC, DFOP, HS and SFORB

2014-05-20  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-28)

	* Do not backtransform confidence intervals for formation fractions if more
	  than one compound is formed, as such parameters only define the
	  pathways as a set
	* Add historical remarks and some background to the main package vignette
	* Correct 'isotropic' into 'isometric' for the ilr transformation

2014-05-09  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-27)

	* Fork the GUI into a separate package gmkin
	* DESCRIPTION, NAMESPACE, TODO: Adapt and add copyright information
	* Remove files belonging to the GUI
	* Possibility to fit without parameter transformations, using bounds
	  as implemented in FME
	* Add McCall 2,4,5-T dataset
	* Enable selection of observed variables in plotting
	* Add possibility to show residual plot in plot.mkinfit
	* R/mkinparplot.R, man/mkinparplot.Rd: plot parameters with confidence
	  intervals

2014-02-27  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-25)

	* Change vignette format from Sweave to knitr
	* Split examples vignette to FOCUS_L and FOCUS_Z
	* Remove warning about constant formation fractions in mkinmod
	  as it was based on a misconception
	* Restrict the unit test with the Schaefer data to parent and primary
	  metabolites as formation fraction and DT50 for A2 are higly
	  correlated and passing the test is platform dependent. For example,
	  the test fails in 1 out of 14 platforms on CRAN as of today.
	* Add Eurofins Regulatory AG copyright notices
	* Import FME and deSolve instead of depending on them to have clean startup
	* Add a starter function for the GUI: gmkin()