@@ -3,8 +3,9 @@
 	* R/mkinresplot.R: Make it possible to specify xlim
 	* R/geometric_mean.R, man/geometric_mean.Rd: Add geometric mean
 	  function
-	* R/mkinfit.R, man/mkinfit.Rd: Calculate additional (pseudo)-DT50
-	  values for FOMC, DFOP, HS and SFORB
+	* R/endpoints.R, man/endpoints.Rd: Calculate additional (pseudo)-DT50
+	  values for FOMC, DFOP, HS and SFORB. Avoid calculation of formation
+	  fractions from rate constants when they are directly fitted
 
 2014-05-20  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-28)
 
